# shallow-water-model_docker

./: .gitignore  README.md  clean  compile  configure
arch/: Makefile.ac  Makefile_mpi.ac  configure.ac  functions.sh
src/: Makefile  constants.f90  gridinfo.f90  io_module.f90  kinds.f90  main.f90  model_core.f90  model_core_mpi.f90  mpi_functions.f90  mpi_module.f90  physics.f90  physics_mpi.f90  system_state.f90
util/: namelist.input
util/docker/: Dockerfile  comp.sh  entrypoint.sh  system_requirements.txt
util/docker/modulefiles/gnu/: 9.4.0.lua
util/docker/modulefiles/hdf5/gnu/: 1.12.2.lua
util/docker/modulefiles/hdf5/intel/: 1.12.2.lua
util/docker/modulefiles/intel/: 2021.7.1.lua
util/docker/modulefiles/netcdf/gnu/: 4.9.0.lua
util/docker/modulefiles/netcdf/intel/: 4.9.0.lua
util/docker/modulefiles/zlib/gnu/: 1.2.13.lua
util/docker/modulefiles/zlib/intel/: 1.2.13.lua
util/postproc/: 3d_plot.py
