
#-----------------------------------------
# gnu compiler settings
#-----------------------------------------  
COMP_NAME="gnu"
FC="gfortran"
CXX="g++"
CC="gcc"
CPPFLAGS="-cpp"
FFLAGS="-c -O3"
LDFLAGS=""
//
#-----------------------------------------
# intel compiler settings
#-----------------------------------------
COMP_NAME="intel"
FC="ifort"
CXX="icpc"
CC="icc"
CPPFLAGS="-fpp"
FFLAGS="-c -O3"
LDFLAGS=""
//