
#-----------------------------------------
# gnu compiler settings
#-----------------------------------------  
COMP_NAME='gnu'
FC='gfortran'
CXX='g++'
CC='gcc'
CPPFLAGS='-I${NETCDF}/include -cpp'
FFLAGS='-c -O3'
LDFLAGS='-L${NETCDF}/lib -lnetcdff'
//
#-----------------------------------------
# intel compiler settings
#-----------------------------------------
COMP_NAME='intel'
FC='ifort'
CXX='icpc'
CC='icc'
CPPFLAGS='-I${NETCDF}/include -fpp'
FFLAGS='-c -O3'
LDFLAGS='-L${NETCDF}/lib -lnetcdff'
//
#-----------------------------------------
# MPI intel compiler settings
#-----------------------------------------
COMP_NAME='mpiintel'
FC='mpiifort'
CXX='mpiicpc'
CC='mpiicc'
CPPFLAGS='-I${NETCDF}/include -fpp -DMPI'
FFLAGS='-c -O3'
LDFLAGS='-L${NETCDF}/lib -lnetcdff'
//